{
  "version": 4,
  "terraform_version": "1.2.6",
  "serial": 41,
  "lineage": "b47e7f58-7e79-1f9b-beb3-da69910b66be",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0965b3cef85437418",
            "associate_with_private_ip": "10.0.1.50",
            "association_id": "eipassoc-0160057305f95a69d",
            "domain": "vpc",
            "id": "eipalloc-0965b3cef85437418",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-0c0c8e01aa32e1b08",
            "private_dns": "ip-10-0-1-50.ap-south-1.compute.internal",
            "private_ip": "10.0.1.50",
            "public_dns": "ec2-13-127-127-46.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.127.127.46",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.simple-web-app",
            "aws_network_interface.jenkins",
            "aws_security_group.allow-all-outbound",
            "aws_security_group.allow-jenkins-traffic",
            "aws_security_group.allow-ssh-traffic",
            "aws_security_group.allow-staging-traffic",
            "aws_subnet.subnet-public-jenkins",
            "aws_vpc.simple-web-app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "simple-web-app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ba51c79bfe9c333f",
            "associate_with_private_ip": "10.0.3.50",
            "association_id": "eipassoc-0dbe43766eb7754cb",
            "domain": "vpc",
            "id": "eipalloc-0ba51c79bfe9c333f",
            "instance": "i-0403ba7b06483896d",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-002fd591a2da7b731",
            "private_dns": "ip-10-0-3-50.ap-south-1.compute.internal",
            "private_ip": "10.0.3.50",
            "public_dns": "ec2-3-108-102-94.ap-south-1.compute.amazonaws.com",
            "public_ip": "3.108.102.94",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.simple-web-app",
            "aws_network_interface.simple-web-app",
            "aws_security_group.allow-all-outbound",
            "aws_security_group.allow-ssh-traffic",
            "aws_security_group.allow-web-traffic",
            "aws_subnet.subnet-public-web-app",
            "aws_vpc.simple-web-app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "simple-web-app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:019717402215:internet-gateway/igw-0678d417e076c7dcd",
            "id": "igw-0678d417e076c7dcd",
            "owner_id": "019717402215",
            "vpc_id": "vpc-0a4d84493115e1ab6"
          },
          "dependencies": [
            "aws_vpc.simple-web-app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:019717402215:network-interface/eni-0c0c8e01aa32e1b08",
            "id": "eni-0c0c8e01aa32e1b08",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "02:4d:7c:36:58:e8",
            "owner_id": "019717402215",
            "private_dns_name": "ip-10-0-1-50.ap-south-1.compute.internal",
            "private_ip": "10.0.1.50",
            "private_ip_list": [
              "10.0.1.50"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.1.50"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-01a6c08aad0fd3475",
              "sg-03b5c906e1cf50e8f",
              "sg-054dc181b35dc08be",
              "sg-0dab6f91fb52764c6"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0cd82a96a9454e9d2"
          },
          "dependencies": [
            "aws_security_group.allow-all-outbound",
            "aws_security_group.allow-jenkins-traffic",
            "aws_security_group.allow-ssh-traffic",
            "aws_security_group.allow-staging-traffic",
            "aws_subnet.subnet-public-jenkins",
            "aws_vpc.simple-web-app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "simple-web-app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:019717402215:network-interface/eni-002fd591a2da7b731",
            "attachment": [
              {
                "attachment_id": "eni-attach-0f5b39859797a8307",
                "device_index": 0,
                "instance": "i-0403ba7b06483896d"
              }
            ],
            "id": "eni-002fd591a2da7b731",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "02:9b:11:49:b3:56",
            "owner_id": "019717402215",
            "private_dns_name": "ip-10-0-3-50.ap-south-1.compute.internal",
            "private_ip": "10.0.3.50",
            "private_ip_list": [
              "10.0.3.50"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.3.50"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-01a6c08aad0fd3475",
              "sg-07cccbb57e353a3a0",
              "sg-0dab6f91fb52764c6"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04260187416a0ce67"
          },
          "dependencies": [
            "aws_security_group.allow-all-outbound",
            "aws_security_group.allow-ssh-traffic",
            "aws_security_group.allow-web-traffic",
            "aws_subnet.subnet-public-web-app",
            "aws_vpc.simple-web-app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "allow-outgoing-access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:019717402215:route-table/rtb-0c826a6a26fe57989",
            "id": "rtb-0c826a6a26fe57989",
            "owner_id": "019717402215",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0678d417e076c7dcd",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Route Table Allowing Outgoing Access"
            },
            "tags_all": {
              "Name": "Route Table Allowing Outgoing Access"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a4d84493115e1ab6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.simple-web-app",
            "aws_vpc.simple-web-app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "jenkins-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01f45958f0a87c4fc",
            "route_table_id": "rtb-0c826a6a26fe57989",
            "subnet_id": "subnet-0cd82a96a9454e9d2"
          },
          "dependencies": [
            "aws_internet_gateway.simple-web-app",
            "aws_route_table.allow-outgoing-access",
            "aws_subnet.subnet-public-jenkins",
            "aws_vpc.simple-web-app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "web-app-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05b6bace15d498213",
            "route_table_id": "rtb-0c826a6a26fe57989",
            "subnet_id": "subnet-04260187416a0ce67"
          },
          "dependencies": [
            "aws_internet_gateway.simple-web-app",
            "aws_route_table.allow-outgoing-access",
            "aws_subnet.subnet-public-web-app",
            "aws_vpc.simple-web-app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow-all-outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:019717402215:security-group/sg-0dab6f91fb52764c6",
            "description": "Allow all outbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0dab6f91fb52764c6",
            "ingress": [],
            "name": "allow-all-outbound",
            "name_prefix": "",
            "owner_id": "019717402215",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0a4d84493115e1ab6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.simple-web-app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow-jenkins-traffic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:019717402215:security-group/sg-054dc181b35dc08be",
            "description": "Allow jenkins inbound traffic",
            "egress": [],
            "id": "sg-054dc181b35dc08be",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Jenkins",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "allow-jenkins-traffic",
            "name_prefix": "",
            "owner_id": "019717402215",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0a4d84493115e1ab6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.simple-web-app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow-ssh-traffic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:019717402215:security-group/sg-01a6c08aad0fd3475",
            "description": "Allow SSH inbound traffic",
            "egress": [],
            "id": "sg-01a6c08aad0fd3475",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow-ssh-traffic",
            "name_prefix": "",
            "owner_id": "019717402215",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0a4d84493115e1ab6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.simple-web-app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow-staging-traffic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:019717402215:security-group/sg-03b5c906e1cf50e8f",
            "description": "Allow Inbound traffic for security checks",
            "egress": [],
            "id": "sg-03b5c906e1cf50e8f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Staging",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8000
              }
            ],
            "name": "allow-stagin-traffic",
            "name_prefix": "",
            "owner_id": "019717402215",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0a4d84493115e1ab6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.simple-web-app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow-web-traffic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:019717402215:security-group/sg-07cccbb57e353a3a0",
            "description": "Allow HTTP / HTTPS inbound traffic",
            "egress": [],
            "id": "sg-07cccbb57e353a3a0",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "allow-web-traffic",
            "name_prefix": "",
            "owner_id": "019717402215",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0a4d84493115e1ab6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.simple-web-app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet-public-jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:019717402215:subnet/subnet-0cd82a96a9454e9d2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cd82a96a9454e9d2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "019717402215",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Jenkins Subnet"
            },
            "tags_all": {
              "Name": "Jenkins Subnet"
            },
            "vpc_id": "vpc-0a4d84493115e1ab6"
          },
          "dependencies": [
            "aws_vpc.simple-web-app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet-public-web-app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:019717402215:subnet/subnet-04260187416a0ce67",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04260187416a0ce67",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "019717402215",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Simple Web App Subnet"
            },
            "tags_all": {
              "Name": "Simple Web App Subnet"
            },
            "vpc_id": "vpc-0a4d84493115e1ab6"
          },
          "dependencies": [
            "aws_vpc.simple-web-app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "simple-web-app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:019717402215:vpc/vpc-0a4d84493115e1ab6",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0009068b4e3b6322b",
            "default_route_table_id": "rtb-0a2cf615d475be062",
            "default_security_group_id": "sg-0073cb0d59e5d298b",
            "dhcp_options_id": "dopt-e733848c",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0a4d84493115e1ab6",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a2cf615d475be062",
            "owner_id": "019717402215",
            "tags": {
              "Name": "Simple Web App VPC"
            },
            "tags_all": {
              "Name": "Simple Web App VPC"
            }
          }
        }
      ]
    },
    {
      "module": "module.application-server",
      "mode": "managed",
      "type": "aws_instance",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0bcf5425cdc1d8a85",
            "arn": "arn:aws:ec2:ap-south-1:019717402215:instance/i-0403ba7b06483896d",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "simple-web-app",
            "id": "i-0403ba7b06483896d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "simple-web-app",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-002fd591a2da7b731"
              }
            ],
            "primary_network_interface_id": "eni-002fd591a2da7b731",
            "private_dns": "ip-10-0-3-50.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.50",
            "public_dns": "ec2-3-108-102-94.ap-south-1.compute.amazonaws.com",
            "public_ip": "3.108.102.94",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-033716e537d5bafdb",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04260187416a0ce67",
            "tags": {
              "Name": "Simple Web App"
            },
            "tags_all": {
              "Name": "Simple Web App"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-01a6c08aad0fd3475",
              "sg-07cccbb57e353a3a0",
              "sg-0dab6f91fb52764c6"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.simple-web-app",
            "aws_iam_role.simple-web-app",
            "aws_key_pair.simple-web-app-key",
            "aws_network_interface.simple-web-app",
            "aws_security_group.allow-all-outbound",
            "aws_security_group.allow-ssh-traffic",
            "aws_security_group.allow-web-traffic",
            "aws_subnet.subnet-public-web-app",
            "aws_vpc.simple-web-app"
          ]
        }
      ]
    },
    {
      "module": "module.jenkins",
      "mode": "managed",
      "type": "aws_instance",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0bcf5425cdc1d8a85",
            "arn": "arn:aws:ec2:ap-south-1:019717402215:instance/i-0bb8b0bfcb204c244",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "jenkins",
            "id": "i-0bb8b0bfcb204c244",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "jenkins",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-0c0c8e01aa32e1b08"
              }
            ],
            "primary_network_interface_id": "eni-0c0c8e01aa32e1b08",
            "private_dns": "ip-10-0-1-50.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.50",
            "public_dns": "ec2-13-127-127-46.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.127.127.46",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-05c70ba153b21751e",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0cd82a96a9454e9d2",
            "tags": {
              "Name": "jenkins"
            },
            "tags_all": {
              "Name": "jenkins"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-01a6c08aad0fd3475",
              "sg-03b5c906e1cf50e8f",
              "sg-054dc181b35dc08be",
              "sg-0dab6f91fb52764c6"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.jenkins",
            "aws_key_pair.jenkins-key",
            "aws_network_interface.jenkins"
          ]
        }
      ]
    }
  ]
}